fixed text alignment inside mailto button

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@ body {
 }
 
 .contact-me {
+  display: flex;
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: flex-start; */
   position: fixed;
   right: 0;
   bottom: 0;
